packages/scanners/test/fixtures/kube-linter/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: shop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      hostNetwork: true
      hostPID: true
      hostIPC: true
      serviceAccount: old
      securityContext:
        sysctls:
          - name: kernel.msgmax
            value: "65536"
      containers:
        - name: app
          image: "nginx:latest"
          ports:
            - containerPort: 22
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            procMount: Unmasked
          livenessProbe:
            httpGet:
              port: 9999
          readinessProbe:
            httpGet:
              port: 9998
          volumeMounts:
            - name: sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: sock
          hostPath:
            path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: nothing
  ports:
    - port: 80
      targetPort: bad_port_name_way_too_long
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: old
spec:
  backend:
    serviceName: web
    servicePort: 80
